--- a/.github/workflows/rebuild-docker-dep.yaml
+++ b/.github/workflows/rebuild-docker-dep.yaml
@@ -46,11 +46,15 @@ jobs:
         submodules: recursive
         path: ${{ inputs.repository }}
 
+    - env:
+        GH_TOKEN: ${{ secrets.PAT }}
+
     - name: Checkout Branch Recursive Submodules
       shell: bash
       run: |
         cd ${{ inputs.repository }}
-        git submodule foreach --recursive "(git fetch --all && git checkout ${{ github.head_ref }}) || :"
+        gh auth login
+        git submodule foreach --recursive "git checkout ${{ github.head_ref }} || :"
 
     - name: Build Docker Image
       uses: umdlife/umd_workflows/docker-build-push-action@main
