Change to use gh pr checkout rather than git checkout

--- a/.github/workflows/rebuild-docker-dep.yaml
+++ b/.github/workflows/rebuild-docker-dep.yaml
@@ -53,7 +53,7 @@ jobs:
       shell: bash
       run: |
         cd ${{ inputs.repository }}
-        git submodule foreach --recursive "git checkout ${{ github.head_ref }} || :"
+        git submodule foreach --recursive "gh pr checkout ${{ github.head_ref }} || :"
 
     - name: Build Docker Image
       uses: umdlife/umd_workflows/docker-build-push-action@main
