--- a/.github/workflows/rebuild-docker-dep.yaml
+++ b/.github/workflows/rebuild-docker-dep.yaml
@@ -32,6 +32,7 @@ jobs:
       id: checkout_repo
       with:
         repository: umdlife/${{ inputs.repository }}
+        fetch-depth: '0'
         ref: ${{ github.head_ref }}
         token: ${{ secrets.PAT }}
         submodules: recursive
@@ -42,6 +43,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         repository: umdlife/${{ inputs.repository }}
+        fetch-depth: '0'
         ref: dev
         token: ${{ secrets.PAT }}
         submodules: recursive
@@ -51,7 +53,7 @@ jobs:
       shell: bash
       run: |
         cd ${{ inputs.repository }}
-        git submodule foreach --recursive "git checkout main || :"
+        git submodule foreach --recursive "git checkout ${{ github.head_ref }} || :"
 
     - name: Build Docker Image
       uses: umdlife/umd_workflows/docker-build-push-action@main
