--- a/.github/workflows/rebuild-docker.yaml
+++ b/.github/workflows/rebuild-docker.yaml
@@ -12,6 +12,8 @@ on:
         required: true
         type: string
     secrets:
+      PAT: 
+        required: true
       DOCKERHUB_USERNAME:
         required: true
       DOCKERHUB_TOKEN:
@@ -24,7 +26,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         submodules: recursive
-        token: ${{ secrets.UMDLIFEDEV_TOKEN}}
+        token: ${{ secrets.PAT }}
         ref: ${{ github.head_ref }}
 
     - name: Build Docker Image
