--- a/docker-build-push-action/action.yaml
+++ b/docker-build-push-action/action.yaml
@@ -1,25 +1,6 @@
-name: 'Docker Build and Push'
-description: 'Docker Login, Build, and Push'
+name: 'Docker Setup and Login'
+description: 'Docker Setup and Login'
 inputs:
-    context:
-      description: 'Context for the docker build'
-      default: ./
-      required: false
-    dockerfile:
-      description: 'Dockerfile to use for the build'
-      required: true
-    stage:
-      description: 'Stage to build'
-      required: true
-    arch:
-      description: 'Architecture to build'
-      required: true
-    push:
-      description: 'Push the image to DockerHub'
-      required: true
-    tags:
-      description: 'Name of the image to build and push'
-      required: false
     username:
       description: 'DockerHub username'
       required: true
@@ -50,14 +31,3 @@ runs:
       uses: docker/setup-buildx-action@v2
       with:
         endpoint: builders
-        
-    - name: Build and push
-      id: docker_build
-      uses: docker/build-push-action@v3
-      with:
-        context: ${{ inputs.context }}
-        file: ${{ inputs.dockerfile }}
-        platforms: ${{ inputs.arch }}
-        push: ${{ inputs.push }}
-        target: ${{ inputs.stage }}
-        tags: ${{ inputs.image_name }}
