--- a/setup-docker-env-action/action.yaml
+++ b/setup-docker-env-action/action.yaml
@@ -1,67 +1,33 @@
-name: 'Docker Build and Push'
-description: 'Docker Login, Build, and Push'
+name: 'Docker Setup and Login'
+description: 'Docker Setup and Login'
 inputs:
-  context:
-    description: 'Context for the docker build'
-    default: ./
-    required: false
-  dockerfile:
-    description: 'Dockerfile to use for the build'
-    required: true
-  stage:
-    description: 'Stage to build'
-    required: true
-  arch:
-    description: 'Architecture to build'
-    required: true
-  push:
-    description: 'Push the image to DockerHub'
-    required: true
-  tags:
-    description: 'Name of the image to build and push'
-    required: false
-  pat:
-    description: 'Personal Access Token for GitHub'
-    required: true
-  username:
-    description: 'DockerHub username'
-    required: true
-  token:
-    description: 'DockerHub token'
-    required: true
-outputs:
-  bump:
-    description: 'Bump type'
-    value: ${{ steps.bump_type.outputs.bump }}
-  stage:
-    description: 'Stage'
-    value: ${{ steps.bump_type.outputs.stage }}
-  tag:
-    description: 'Tag'
-    value: ${{ steps.bump_type.outputs.tag }}
+    username:
+      description: 'DockerHub username'
+      required: true
+    token:
+      description: 'DockerHub token'
+      required: true
 runs:
   using: "composite"
   steps:
-  - name: Set Bump 
-    id: bump_type
-    shell: bash
-    run: |
-      if [[ ${{ github.ref_name }} == "main" ]]; then
-        echo "BUMP=major" >> $GITHUB_ENV
-      elif [[ ${{ github.ref_name }} == "qa" ]]; then
-        echo "BUMP=minor" >> $GITHUB_ENV
-      elif [[ ${{ github.ref_name }} == "dev" ]]; then
-        echo "BUMP=patch" >> $GITHUB_ENV
-      fi
-      echo "::set-output name=bump::$(echo $BUMP)"
+    - name: Login to DockerHub
+      uses: docker/login-action@v2 
+      with:
+        username: ${{ inputs.username }}
+        password: ${{ inputs.token }}
 
-  - name: Bump version
-    uses: anothrNick/github-tag-action@1.39.0
-    id: autoversion
-    env:
-      GITHUB_TOKEN: ${{ inputs.pat }}
-      INITIAL_VERSION: 1.0.0
-      DRY_RUN: "true"
-      WITH_V: "true"
-      DEFAULT_BUMP: ${{ env.BUMP }}
-      RELEASE_BRANCHES: dev,qa,main
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v2
+      with:
+        platforms: all
+
+    - name: Set up Docker Context for Buildx
+      id: buildx-context
+      shell: bash
+      run: |
+        docker context create builders
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+      with:
+        endpoint: builders
