--- a/.github/workflows/rebuild_docker_dep.yaml
+++ b/.github/workflows/rebuild_docker_dep.yaml
@@ -55,7 +55,7 @@ jobs:
         cd ${{ inputs.repository }}
         git submodule foreach --recursive "git checkout ${{ github.head_ref }} || :"
 
-    - name: Build Docker Image
+    - name: Setup Docker
       uses: umdlife/umd_workflows/setup-docker-env-action@main
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
