--- a/.github/workflows/rebuild_docker.yaml
+++ b/.github/workflows/rebuild_docker.yaml
@@ -39,7 +39,7 @@ jobs:
       id: docker_build
       uses: docker/build-push-action@v3
       with:
-        context: ./
+        context: ../
         file: ./docker/Dockerfile
         platforms: ${{ inputs.arch }}
         target: ${{ inputs.stage }}
