--- a/.github/workflows/rebuild_docker_dep.yaml
+++ b/.github/workflows/rebuild_docker_dep.yaml
@@ -65,7 +65,7 @@ jobs:
       id: docker_build
       uses: docker/build-push-action@v3
       with:
-        context: ../
+        context: ./
         file: ./${{ inputs.repository }}/docker/Dockerfile
         platforms: ${{ inputs.arch }}
         target: ${{ inputs.stage }}
