--- a/.github/workflows/rebuild_docker.yaml
+++ b/.github/workflows/rebuild_docker.yaml
@@ -29,7 +29,7 @@ jobs:
         token: ${{ secrets.PAT }}
         ref: ${{ github.head_ref }}
 
-    - name: Build Docker Image
+    - name: Setup Docker
       uses: umdlife/umd_workflows/setup-docker-env-action@main
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
