--- a/.github/workflows/rebuild_docker.yaml
+++ b/.github/workflows/rebuild_docker.yaml
@@ -40,6 +40,7 @@ jobs:
       uses: docker/build-push-action@v3
       with:
         context: ../
+        no-cache: true
         file: ./docker/Dockerfile
         platforms: ${{ inputs.arch }}
         target: ${{ inputs.stage }}
