--- a/.github/workflows/rebuild_docker_dep.yaml
+++ b/.github/workflows/rebuild_docker_dep.yaml
@@ -55,13 +55,18 @@ jobs:
         cd ${{ inputs.repository }}
         git submodule foreach --recursive "git checkout ${{ github.head_ref }} || :"
 
-    - name: Build Docker Image
-      uses: umdlife/umd_workflows/docker_build_push_action@main
+    - name: Setup Docker
+      uses: umdlife/umd_workflows/setup-docker-env-action@main
       with:
-        context: ./
-        dockerfile: ./${{ inputs.repository }}/docker/Dockerfile
-        arch: ${{ inputs.arch }}
-        stage: ${{ inputs.stage }}
-        push: false
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         token: ${{ secrets.DOCKERHUB_TOKEN }}
+
+    - name: Build and push
+      id: docker_build
+      uses: docker/build-push-action@v3
+      with:
+        context: ./
+        file: ./${{ inputs.repository }}/docker/Dockerfile
+        platforms: ${{ inputs.arch }}
+        target: ${{ inputs.stage }}
+        push: false
