--- a/.github/workflows/tag_and_push_docker.yaml
+++ b/.github/workflows/tag_and_push_docker.yaml
@@ -24,7 +24,9 @@ jobs:
     - name: Get Repo name
       shell: bash
       run: |
-        echo "IMAGE_NAME=${{ github.event.repository.name//_/- }}" >> $GITHUB_ENV
+        IMAGE_NAME=${{ github.event.repository.name }}
+        IMAGE_NAME="${IMAGE_NAME//_/-}"
+        echo "IMAGE_NAME=${IMAGE_NAME}" >> $GITHUB_ENV
         echo "$IMAGE_NAME"
 
     - name: Set Bump 
