--- a/.github/workflows/rebuild_docker.yaml
+++ b/.github/workflows/rebuild_docker.yaml
@@ -11,6 +11,11 @@ on:
         description: 'Stage to build'
         required: true
         type: string
+      push:
+        description: 'Push to DockerHub'
+        required: false
+        type: boolean
+        default: false
     secrets:
       PAT: 
         required: true
@@ -29,6 +34,24 @@ jobs:
         token: ${{ secrets.PAT }}
         ref: ${{ github.head_ref }}
 
+    - name: Get Repo name
+      shell: bash
+      run: |
+        IMAGE_NAME=${{ github.event.repository.name }}
+        IMAGE_NAME="${IMAGE_NAME//_/-}"
+        if [[ ${{ inputs.stage }} == "dev_stage" ]]; then
+          IMAGE_NAME+=-dev
+        echo "IMAGE_NAME=${IMAGE_NAME}" >> $GITHUB_ENV
+        echo "$IMAGE_NAME"
+
+    - name: Get Branch name
+      shell: bash
+      run: |
+        BRANCH_NAME=${{ github.ref_name }}
+        BRANCH_NAME="${BRANCH_NAME//\//-}"
+        echo "BRANCH_NAME=${BRANCH_NAME}" >> $GITHUB_ENV
+        echo "$BRANCH_NAME"
+
     - name: Setup Docker
       uses: umdlife/umd_workflows/setup-docker-env-action@main
       with:
@@ -44,4 +67,5 @@ jobs:
         file: ./docker/Dockerfile
         platforms: ${{ inputs.arch }}
         target: ${{ inputs.stage }}
-        push: false
+        push: ${{ inputs.push }}
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ env.BRANCH_NAME }}
