--- a/.github/workflows/rebuild_docker.yaml
+++ b/.github/workflows/rebuild_docker.yaml
@@ -39,8 +39,10 @@ jobs:
       run: |
         IMAGE_NAME=${{ github.event.repository.name }}
         IMAGE_NAME="${IMAGE_NAME//_/-}"
-        if [[ ${{ inputs.stage }} == "dev_stage" ]]; then
+        if [[ ${{ inputs.stage }} == "dev_stage" ]]; 
+        then
           IMAGE_NAME+=-dev
+        fi
         echo "IMAGE_NAME=${IMAGE_NAME}" >> $GITHUB_ENV
         echo "$IMAGE_NAME"
 
