--- a/.github/workflows/delete_docker.yaml
+++ b/.github/workflows/delete_docker.yaml
@@ -24,6 +24,11 @@ jobs:
       run: |
         BRANCH_NAME=${{ github.head_ref }}
         BRANCH_NAME="${BRANCH_NAME//\//-}"
+        if [[ ${BRANCH_NAME} == "dev" || ${BRANCH_NAME} == "qa" || ${BRANCH_NAME} == "main" ]]; 
+        then
+          BRANCH_NAME="stop-doing-this"
+          exit 1
+        fi
         echo "BRANCH_NAME=${BRANCH_NAME}" >> $GITHUB_ENV
         echo "$BRANCH_NAME"
 
