--- a/get-docker-info-action/action.yaml
+++ b/get-docker-info-action/action.yaml
@@ -11,12 +11,12 @@ outputs:
   image_name:
     description: 'Docker image name'
     value: ${{ steps.get_image_name.outputs.IMAGE_NAME }}
-  tag_name:
-    description: 'Docker tag name'
-    value: ${{ steps.get_tag_name.outputs.TAG_NAME }}
-  push:
-    description: 'Push to DockerHub'
-    value: ${{ steps.push_to_dockerhub.outputs.PUSH_TO_DOCKERHUB }}
+  # tag_name:
+  #   description: 'Docker tag name'
+  #   value: ${{ steps.get_tag_name.outputs.TAG_NAME }}
+  # push:
+  #   description: 'Push to DockerHub'
+  #   value: ${{ steps.push_to_dockerhub.outputs.PUSH_TO_DOCKERHUB }}
 runs:
   using: "composite"
   steps:
@@ -32,25 +32,25 @@ runs:
         fi
         echo "${IMAGE_NAME}" >> $GITHUB_OUTPUT
 
-    - name: Get Tag name
-      id: get_tag_name
-      shell: bash
-      run: |
-        TAG_NAME=${{ github.head_ref }}
-        TAG_NAME="${TAG_NAME//\//-}"
-        echo "${TAG_NAME}" >> $GITHUB_OUTPUT
+    # - name: Get Tag name
+    #   id: get_tag_name
+    #   shell: bash
+    #   run: |
+    #     TAG_NAME=${{ github.head_ref }}
+    #     TAG_NAME="${TAG_NAME//\//-}"
+    #     echo "${TAG_NAME}" >> $GITHUB_OUTPUT
 
-    - name: Decide if we should push to DockerHub
-      id: push_to_dockerhub
-      shell: bash
-      run: |
-        if [[ ${{ inputs.push }} == "true" && 
-              ${{ github.head_ref }} != "main" && 
-              ${{ github.head_ref }} != "qa" && 
-              ${{ github.head_ref }} != "dev" &&
-              ${{ github.head_ref }} =~ UP-[0-9]+ ]];
-        then
-          echo "PUSH_TO_DOCKERHUB=true" >> $GITHUB_OUTPUT
-        else
-          echo "PUSH_TO_DOCKERHUB=false" >> $GITHUB_OUTPUT
-        fi
+    # - name: Decide if we should push to DockerHub
+    #   id: push_to_dockerhub
+    #   shell: bash
+    #   run: |
+    #     if [[ ${{ inputs.push }} == "true" && 
+    #           ${{ github.head_ref }} != "main" && 
+    #           ${{ github.head_ref }} != "qa" && 
+    #           ${{ github.head_ref }} != "dev" &&
+    #           ${{ github.head_ref }} =~ UP-[0-9]+ ]];
+    #     then
+    #       echo "PUSH_TO_DOCKERHUB=true" >> $GITHUB_OUTPUT
+    #     else
+    #       echo "PUSH_TO_DOCKERHUB=false" >> $GITHUB_OUTPUT
+    #     fi
