--- a/.github/workflows/delete_docker.yaml
+++ b/.github/workflows/delete_docker.yaml
@@ -11,29 +11,18 @@ jobs:
   delete_docker:
     runs-on: self-hosted
     steps:
-    - name: Get Repo name
-      shell: bash
-      run: |
-        IMAGE_NAME=${{ github.event.repository.name }}
-        IMAGE_NAME="${IMAGE_NAME//_/-}"
-        echo "IMAGE_NAME=${IMAGE_NAME}" >> $GITHUB_ENV
-        echo "$IMAGE_NAME"
-
-    - name: Get Branch name
-      shell: bash
-      run: |
-        BRANCH_NAME=${{ github.head_ref }}
-        BRANCH_NAME="${BRANCH_NAME//\//-}"
-        if [[ ${BRANCH_NAME} == "dev" || ${BRANCH_NAME} == "qa" || ${BRANCH_NAME} == "main" ]]; 
-        then
-          BRANCH_NAME="stop-doing-this"
-        fi
-        echo "BRANCH_NAME=${BRANCH_NAME}" >> $GITHUB_ENV
-        echo "$BRANCH_NAME"
+    - name: Get Image name
+      id: get_docker_info
+      uses: umdlife/umd_workflows/get-docker-info-from-pr@feat/push-on-pr
+      with:
+        repository: ${{ github.event.repository.name }}
+        stage: prod_stage
+        push: true
 
     - name: Delete Docker Image
+      if: steps.get_docker_info.outputs.push == 'true'
       shell: bash
       run: |
         TOKEN=$(curl -s -H "Content-Type: application/json" -X POST -d '{"username": "'${{ secrets.DOCKERHUB_USERNAME }}'", "password": "'${{ secrets.DOCKERHUB_TOKEN }}'"}' https://hub.docker.com/v2/users/login/ | jq -r .token)
-        curl -s  -X DELETE  -H "Authorization: JWT ${TOKEN}" https://hub.docker.com/v2/repositories/${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}-dev/tags/${{ env.BRANCH_NAME }}/
-        curl -s  -X DELETE  -H "Authorization: JWT ${TOKEN}" https://hub.docker.com/v2/repositories/${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}/tags/${{ env.BRANCH_NAME }}/
+        curl -s  -X DELETE  -H "Authorization: JWT ${TOKEN}" https://hub.docker.com/v2/repositories/${{ secrets.DOCKERHUB_USERNAME }}/${{ steps.get_docker_info.outputs.image_name }}-dev/tags/${{ steps.get_docker_info.outputs.tag_name }}/
+        curl -s  -X DELETE  -H "Authorization: JWT ${TOKEN}" https://hub.docker.com/v2/repositories/${{ secrets.DOCKERHUB_USERNAME }}/${{ steps.get_docker_info.outputs.image_name }}/tags/${{ steps.get_docker_info.outputs.tag_name }}/
