--- a/.github/workflows/delete_docker.yaml
+++ b/.github/workflows/delete_docker.yaml
@@ -18,7 +18,7 @@ jobs:
     steps:
     - name: Get Image name
       id: get_docker_info
-      uses: umdlife/umd_workflows/get-docker-info-from-pr@feat/push-on-pr
+      uses: umdlife/umd_workflows/get-docker-info-from-pr@main
       with:
         repository: ${{ inputs.repository }}
         stage: prod_stage
