--- a/.github/workflows/rebuild_docker.yaml
+++ b/.github/workflows/rebuild_docker.yaml
@@ -35,7 +35,7 @@ jobs:
         ref: ${{ github.head_ref }}
 
     - name: Build and push
-      uses: umdlife/umd_workflows/push-pr-docker-action@feat/push-on-pr
+      uses: umdlife/umd_workflows/push-pr-docker-action@main
       with:
         repository: ${{ github.event.repository.name }}
         context: ../
