--- a/.github/workflows/rebuild_docker_dep.yaml
+++ b/.github/workflows/rebuild_docker_dep.yaml
@@ -61,7 +61,7 @@ jobs:
         git submodule foreach --recursive "git checkout ${{ github.head_ref }} || :"
 
     - name: Build and push
-      uses: umdlife/umd_workflows/push-pr-docker-action@feat/push-on-pr
+      uses: umdlife/umd_workflows/push-pr-docker-action@main
       with:
         repository: ${{ inputs.repository }}
         context: ./
