--- a/.github/workflows/rebuild_docker.yaml
+++ b/.github/workflows/rebuild_docker.yaml
@@ -11,6 +11,11 @@ on:
         description: 'Stage to build'
         required: true
         type: string
+      push:
+        description: 'Push to DockerHub'
+        required: false
+        type: boolean
+        default: false
     secrets:
       PAT: 
         required: true
@@ -29,19 +34,14 @@ jobs:
         token: ${{ secrets.PAT }}
         ref: ${{ github.head_ref }}
 
-    - name: Setup Docker
-      uses: umdlife/umd_workflows/setup-docker-env-action@main
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        token: ${{ secrets.DOCKERHUB_TOKEN }}
-
     - name: Build and push
-      id: docker_build
-      uses: docker/build-push-action@v3
+      uses: umdlife/umd_workflows/push-pr-docker-action@main
       with:
+        repository: ${{ github.event.repository.name }}
         context: ../
-        no-cache: true
         file: ./docker/Dockerfile
-        platforms: ${{ inputs.arch }}
-        target: ${{ inputs.stage }}
-        push: false
+        arch: ${{ inputs.arch }}
+        stage: ${{ inputs.stage }}
+        push: ${{ inputs.push }}
+        dockerhub_username: ${{ secrets.DOCKERHUB_USERNAME }}
+        dockerhub_token: ${{ secrets.DOCKERHUB_TOKEN }}
