--- a/.github/workflows/tag_and_push_docker.yaml
+++ b/.github/workflows/tag_and_push_docker.yaml
@@ -112,6 +112,7 @@ jobs:
 
     - name: Release Drafter
       uses: release-drafter/release-drafter@v5.21.1
+      if: github.ref_name == 'main' || github.ref_name == 'qa'
       with:
         name: ${{ steps.autoversion.outputs.new_tag }}
         tag: ${{ steps.autoversion.outputs.new_tag }}
