Add auto pr labeler

--- a/.github/workflows/label-pr.yaml
+++ b/.github/workflows/label-pr.yaml
@@ -6,7 +6,7 @@ on:
       PAT: 
         required: true
 jobs:
-  delete_docker:
+  label_pr:
     runs-on: self-hosted
     steps:
     - name: Check Out Workflows Repo 
