--- a/.github/pr-labeler.yml
+++ b/.github/pr-labeler.yml
@@ -1,3 +1,3 @@
-feature: ['feature/*', 'feat/*']
-bug: ['fix/*', 'bugfix/*', 'bug/*', 'hotfix/*']
-maintenance: ['chore/*', 'dev', 'qa', 'main']
+feature: feat/*
+bug: hotfix/*
+maintenance: ['dev', 'qa', 'main']
