--- a/.github/workflows/label_pr.yaml
+++ b/.github/workflows/label_pr.yaml
@@ -9,7 +9,7 @@ jobs:
     runs-on: self-hosted
     steps:
     - name: PR Labeler
-      uses: umdlife/umd_workflows/pr-labeler-action@feat/auto-release
+      uses: umdlife/umd_workflows/pr-labeler-action@main
       with:
           configuration-path: umd_workflows/.github/pr-labeler.yml
       env:
