--- a/.github/workflows/rebuild_docker.yaml
+++ b/.github/workflows/rebuild_docker.yaml
@@ -21,6 +21,11 @@ on:
         required: false
         type: string
         default: ''
+      file:
+        description: 'Dockerfile to build'
+        required: false
+        type: string
+        default: './docker/Dockerfile'
     secrets:
       PAT: 
         required: true
@@ -44,7 +49,7 @@ jobs:
       with:
         repository: ${{ github.event.repository.name }}
         context: ../
-        file: ./docker/Dockerfile
+        file: ${{ inputs.file }}
         arch: ${{ inputs.arch }}
         stage: ${{ inputs.stage }}
         push: ${{ inputs.push }}
