--- a/.github/workflows/clang_format_lint.yaml
+++ b/.github/workflows/clang_format_lint.yaml
@@ -27,6 +27,7 @@ jobs:
     - uses: actions/checkout@v3
       with:
         repository: umdlife/umd_workflows
+        path: test_auto_versioning/umd_workflows
 
     - uses: pre-commit/action@v3.0.0
       with:
