--- a/.github/workflows/clang_format_lint.yaml
+++ b/.github/workflows/clang_format_lint.yaml
@@ -27,8 +27,13 @@ jobs:
     - uses: actions/checkout@v3
       with:
         repository: umdlife/umd_workflows
-        path: test_auto_versioning/umd_workflows
+        path: umd_workflows
+    
+    - name: Exctract pre-commit config file
+      run: |
+        cp umd_workflows/.pre-commit-config.yaml ../.pre-commit-config.yaml &&
+        rm -rf umd_workflows
 
     - uses: pre-commit/action@v3.0.0
       with:
-        extra_args: --config ../umd_workflows/.pre-commit-config.yaml --from-ref ${{ github.base_ref }} --to-ref ${{ github.head_ref }}
+        extra_args: --config ../.pre-commit-config.yaml --from-ref ${{ github.base_ref }} --to-ref ${{ github.head_ref }}
