--- a/.github/workflows/clang_format_lint.yaml
+++ b/.github/workflows/clang_format_lint.yaml
@@ -28,6 +28,7 @@ jobs:
       with:
         repository: umdlife/umd_workflows
         path: umd_workflows
+        ref: feat/cppcheck
     
     - name: Exctract pre-commit config file
       run: |
