--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,15 +5,10 @@ repos:
       - id: black
         language_version: python3
         name: python3.8
-  - repo: https://gitlab.com/pycqa/flake8
-    rev: '3.7.9'  # pick a git hash / tag to point to
-    hooks:
-      - id: flake8
-  - repo: https://gitlab.com/daverona/pre-commit/cpp
-    rev: 0.8.0                 # use the most recent version
-    hooks:
-      # Hooks using native
-      # - id: clang-format         # formatter for C/C++ code based on a style guide
-      #   args: ['-style=file']
-      - id: cpplint              # linter (or style-error checker) for Google C++ Style Guide
-      - id: cppcheck             # static analyzer for C/C++ code
+  -   repo: https://github.com/pre-commit/pre-commit-hooks
+      rev: v4.4.0
+      hooks:
+      - id: cppcheck
+      - id: cpplint
+      - id: check-yaml
+      - id: check-xml
