--- a/.github/workflows/clang_format_lint.yaml
+++ b/.github/workflows/clang_format_lint.yaml
@@ -9,7 +9,7 @@ jobs:
     - uses: actions/checkout@v3
       with:
         ref: ${{ github.head_ref }}
-        depth: 0
+        fetch-depth: 0
 
     - uses: DoozyX/clang-format-lint-action@v0.15
       with:
