--- a/.github/workflows/clang_format_lint.yaml
+++ b/.github/workflows/clang_format_lint.yaml
@@ -38,7 +38,8 @@ jobs:
 
     - name: Run pre-commit
       run: |   
-        apt update && apt install -y cppcheck python3-pip
+        sudo apt update && sudo apt install -y cppcheck
+      shell: bash
     - run: python -m pip install pre-commit cpplint
       shell: bash
     - run: python -m pip freeze --local
