--- a/.github/workflows/clang_format_lint.yaml
+++ b/.github/workflows/clang_format_lint.yaml
@@ -38,7 +38,7 @@ jobs:
 
     - name: Run pre-commit
       run: |   
-        sudo apt update && sudo apt install -y cppcheck
+        sudo apt update && sudo apt install -y cppcheck clang-tidy
       shell: bash
     - run: python -m pip install pre-commit cpplint
       shell: bash
