--- a/.github/workflows/clang_format_lint.yaml
+++ b/.github/workflows/clang_format_lint.yaml
@@ -29,7 +29,7 @@ jobs:
       uses: github/super-linter/slim@v4
       env:
         DEFAULT_BRANCH: ${{ github.base_ref }}
-        GITHUB_TOKEN: ${{ secrets.UMDLIFEDEV_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         VALIDATE_CPP: true
         VALIDATE_XML: true
         VALIDATE_YAML: true
