Wait until formatting is done

--- a/.github/workflows/clang_format_lint.yaml
+++ b/.github/workflows/clang_format_lint.yaml
@@ -4,6 +4,7 @@ on:
   workflow_call:
 jobs:
   clang-format-lint:
+    name: Code Formatting
     runs-on: self-hosted
     steps:
     - uses: actions/checkout@v3
@@ -25,6 +26,7 @@ jobs:
         message: 'Committing clang-format changes'
         
   super-linter:
+    needs: clang-format-lint
     name: Lint Code Base
     runs-on: self-hosted
     steps:
@@ -38,7 +40,6 @@ jobs:
         env:
           DEFAULT_BRANCH: ${{ github.base_ref }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SSH_KEY: ${{ secrets.DOCKERHUB_TOKEN }}
           VALIDATE_CPP: true
           VALIDATE_CLANG_FORMAT: true
           VALIDATE_DOCKERFILE_HADOLINT: true
