--- a/.github/workflows/clang_format_lint.yaml
+++ b/.github/workflows/clang_format_lint.yaml
@@ -40,6 +40,7 @@ jobs:
         env:
           DEFAULT_BRANCH: ${{ github.base_ref }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          LOG_LEVEL: NOTICE
           VALIDATE_ALL_CODEBASE: false
           VALIDATE_CPP: true
           VALIDATE_PYTHON_BLACK: true
