--- a/.github/workflows/clang_format_lint.yaml
+++ b/.github/workflows/clang_format_lint.yaml
@@ -14,6 +14,7 @@ jobs:
     - uses: actions/checkout@v3
       with:
         repository: umdlife/umd_workflows
+        path: umd_workflows
     
     - name: Attach clang-format
       run: |
