--- a/.github/workflows/clang_format_lint.yaml
+++ b/.github/workflows/clang_format_lint.yaml
@@ -2,6 +2,9 @@ name: Run clang-format Linter
 
 on:
   workflow_call:
+    secrets:
+      PAT:
+        required: true
 jobs:
   clang-format-lint:
     name: Code Formatting
@@ -10,6 +13,7 @@ jobs:
     - uses: actions/checkout@v3
       with:
         ref: ${{ github.head_ref }}
+        token: ${{ secrets.PAT }}
     
     - uses: actions/checkout@v3
       with:
