--- a/.github/workflows/rebuild_docker.yaml
+++ b/.github/workflows/rebuild_docker.yaml
@@ -33,6 +33,9 @@ on:
         required: true
       DOCKERHUB_TOKEN:
         required: true
+concurrency:
+  group: '${{ github.workflow }} @ ${{ github.event.pull_request.head.label || github.head_ref || github.ref }}'
+  cancel-in-progress: true
 jobs:
   rebuild_docker:
     runs-on: self-hosted
