--- a/get-docker-info-from-pr/action.yaml
+++ b/get-docker-info-from-pr/action.yaml
@@ -50,8 +50,7 @@ runs:
         if [[ ${{ inputs.push }} == "true" && 
               ${{ github.head_ref }} != "main" && 
               ${{ github.head_ref }} != "qa" && 
-              ${{ github.head_ref }} != "dev" &&
-              ${{ github.head_ref }} =~ UP-[0-9]+ ]];
+              ${{ github.head_ref }} != "dev" ]];
         then
           echo "PUSH_TO_DOCKERHUB=true" >> $GITHUB_OUTPUT
         else
