--- a/push-pr-docker-action/action.yaml
+++ b/push-pr-docker-action/action.yaml
@@ -56,3 +56,5 @@ runs:
         build-args: ${{ inputs.build_args }}
         push: ${{ steps.get_docker_info.outputs.push }}
         tags: ${{ inputs.dockerhub_username }}/${{ steps.get_docker_info.outputs.image_name }}:${{ steps.get_docker_info.outputs.tag_name }}
+        cache-from: type=registry,ref=${{ inputs.dockerhub_username }}/${{ steps.get_docker_info.outputs.image_name }}:buildcache
+        cache-to: type=registry,ref=${{ inputs.dockerhub_username }}/${{ steps.get_docker_info.outputs.image_name }}:buildcache,mode=max
